erDiagram
    User ||--o{ VacationRequest : "solicita"
    User ||--o{ VacationRequestHistory : "altera"
    User ||--o{ BlackoutPeriod : "cria"
    User ||--o{ AcquisitionPeriod : "possui"
    User ||--o{ Feedback : "envia"
    User ||--o| User : "reporta a (manager)"
    
    VacationRequest ||--o{ VacationRequestHistory : "possui"
    VacationRequest }o--o| AcquisitionPeriod : "consome"

    User {
        string id PK
        string name
        string email
        string registration
        string role "Enum: Role"
        string department
        string team
        datetime hireDate
        boolean mustChangePassword
    }

    VacationRequest {
        string id PK
        string userId FK
        string acquisitionPeriodId FK
        datetime startDate
        datetime endDate
        string status "Enum: VacationStatus"
        boolean abono
        boolean thirteenth
        string notes
    }

    AcquisitionPeriod {
        string id PK
        string userId FK
        datetime startDate
        datetime endDate
        int accruedDays
        int usedDays
    }

    Feedback {
        string id PK
        string userId FK "Opcional (Anonimato)"
        string type "Enum: FeedbackType"
        string status "Enum: FeedbackStatus"
        string message
        string anonymousName "Opcional"
        datetime createdAt
    }

    VacationRequestHistory {
        string id PK
        string vacationRequestId FK
        string changedByUserId FK
        string previousStatus
        string newStatus
        string note
        datetime changedAt
    }

    BlackoutPeriod {
        string id PK
        datetime startDate
        datetime endDate
        string reason
        string department
        string createdById FK
    }
